fix overflow on top-50 page

--- a/css/contributor.css
+++ b/css/contributor.css
@@ -1,10 +1,11 @@
 .contributor {
   margin-bottom: 10px;
-  margin-left: 3px;
+  /*margin-left: 3px;*/
+  padding-left: 3px;
 }
 .contributor img {
-  height: 60px;
-  width: 60px;
+  height: 55px;
+  width: 55px;
   border-radius: 50%;
 }
 .contributor h3 {
